Separated DBs,CUD,GET
