# webshop/order-service-webshop/src/main/java/hu/webuni/webshop/order/dto/CategoryDto.java
@@ -1,12 +1,0 @@
-package hu.webuni.webshop.order.dto;
-
-import java.util.ArrayList;
-
-import lombok.Data;
-
-@Data
-public class CategoryDto {
-	private long id;
-	private String name;
-	ArrayList<ProductDto> products;
-}
