# webshop/order-service-webshop/src/main/java/hu/webuni/webshop/order/dto/OrderItemDto.java
@@ -8,5 +8,8 @@ public class OrderItemDto {
 	long quantity;
 	double orderPrice;
 	WsOrderDto wsorder;
-	ProductDto product;
+//	ProductDto product;
+	
+	String productname;
+	long productId;
 }
