# webshop/order-service-webshop/src/main/java/hu/webuni/webshop/order/dto/ProductDto.java
@@ -1,11 +1,0 @@
-package hu.webuni.webshop.order.dto;
-
-
-import lombok.Data;
-@Data
-public class ProductDto {
-	private long id;
-	String name;
-	double price;
-	CategoryDto category;
-}
