# webshop/order-service-webshop/src/main/java/hu/webuni/webshop/order/model/Category.java
@@ -1,33 +1,0 @@
-package hu.webuni.webshop.order.model;
-
-import java.util.Set;
-
-import javax.persistence.Entity;
-import javax.persistence.GeneratedValue;
-import javax.persistence.Id;
-import javax.persistence.OneToMany;
-
-import lombok.AllArgsConstructor;
-import lombok.Builder;
-import lombok.EqualsAndHashCode;
-import lombok.Getter;
-import lombok.NoArgsConstructor;
-import lombok.Setter;
-
-@Getter
-@Setter
-@AllArgsConstructor
-@NoArgsConstructor
-@Builder
-@EqualsAndHashCode(onlyExplicitlyIncluded = true)
-@Entity
-public class Category {
-	@Id
-	@GeneratedValue
-	@EqualsAndHashCode.Include()
-	private long id;
-	private String name;
-	@OneToMany(mappedBy = "category")
-	Set<Product> products;
-
-}
